# ds-geospatial-impact-exposure

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/decisions/: 0001-dasymetric-building-population-exposure.md  0002-residential-only-and-clamped-area-weight.md  0003-pre-existing-need-overlay.md  template.md
pipelines/: build_validation_layers.py  estimate_exposure.py  fetch_hno.py  fetch_overture_attrs.py  fetch_worldpop.py  mirror.py
src/giex/: __init__.py  config.py  db.py
web/: app.js  index.html  style.css  validate.html  validate.js
web/data/: adm1.geojson  adm2.geojson  exposure.json  validate.json
