[project]
name = "ds-geospatial-impact-exposure"
version = "0.1.0"
description = "Population exposure for multi-source satellite damage estimates: dasymetric people-per-damaged-building, aggregated per source per admin division."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    # DuckDB is the join/spatial engine: it reads the upstream damage lake
    # (GeoParquet on Azure Blob, mirrored locally) and does the building<->admin
    # spatial join. spatial/azure/h3 extensions install at runtime, not via pip.
    "duckdb>=1.1",
    # WorldPop raster -> per-building population (dasymetric redistribution).
    "rioxarray>=0.15",
    "rasterio>=1.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17",
    # Admin-boundary simplification + GeoJSON export for the static map.
    "geopandas>=1.0",
    "shapely>=2.0",
    # Blob I/O for the upstream lake + our own processed outputs (same SAS tokens
    # as ocha-stratus). open_blob_cog streams the WorldPop COG.
    "ocha-stratus>=0.1.7",
    "azure-storage-blob>=12.22",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "ipykernel>=6.29",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/giex"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
